@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-24T08:20:09Z",
+  "timestamp" : "2022-10-25T16:19:10Z",
   "count_outdated" : 68,
   "uniques_outdated" : 30,
-  "count" : 70,
-  "uniques" : 32,
+  "count" : 71,
+  "uniques" : 33,
   "views" : [
     {
       "timestamp": "2022-10-17T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-10-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
