@@ -1,3 +1,11 @@
+2022-10-25T16:19:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322585907 # 553
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 30 68 / 32 70
+* notice: next accum: outdated-unq outdated-all / unq all: 30 68 / 33 71
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-25]
+
 2022-10-24T08:20:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3311108452 # 549
 * notice: last 14d: unq all: 2 2
